# py-srl

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml
docs/: USER_GUIDE.md
examples/: 01_simple_inference.py  02_transitive_closure.py  03_filter_conditions.py  04_bind_concat.py  EXAMPLES.md  README.md  age-calculation.srl  ancestor.ttl  ancestor_rules.srl  child-of.srl  closed-world.srl  concat-names.srl  default-value.srl  default-value.ttl  encode-uri.srl  encode-uri.ttl  exists-complex.ttl  family_data.ttl  hash-functions.ttl  in-expression.srl  in-expression.ttl  inverse-properties.ttl  lang-matching.srl  married-to.srl  married-to.ttl  not-exists-filter.srl  not-exists-filter.ttl  part-of.srl  path-alternative.srl  path-inverse.srl  path-negated.srl  path-optional.srl  path-optional.ttl  playground.ipynb  reflexive-property.ttl  regex-matching.srl  regex-matching.ttl  required-properties.ttl  same-term.ttl  sibling.ttl  (+2 more)
examples/aggregation/: aggregation-001.ttl
examples/basic-inference/: basic-inference-001.ttl  basic-inference-002.srl
examples/exists-patterns/: exists-patterns-001.srl  exists-patterns-001.ttl  exists-patterns-003.srl  exists-patterns-004.srl  exists-patterns-004.ttl
examples/negation/: negation-002.ttl
examples/path-expressions/: path-expressions-001.srl  path-expressions-002.ttl  path-expressions-004.ttl
examples/rule-formats/: README.md  rule-format-001.srl  rule-format-001.ttl  rule-format-002.srl  rule-format-002.ttl  rule-format-003.srl  rule-format-005.srl  rule-format-006.srl  rule-format-006.ttl  rule-format-007.srl  rule-format-007.ttl  rule-format-008.ttl  rule-format-009.ttl  rule-format-010.srl  rule-format-010.ttl  rule-format-011.srl  rule-format-011.ttl  rule-format-012.ttl
examples/string-functions/: string-functions-001.srl  string-functions-004.ttl
examples/symmetric/: symmetric-001.srl  symmetric-001.ttl
scripts/: debug_parser.py  debug_transform.py  generate_results.py
src/srl/: __init__.py
src/srl/ast/: __init__.py  nodes.py
src/srl/cli/: __init__.py  formatting.py  main.py
src/srl/engine/: __init__.py  engine.py  expressions.py  rules.py  solutions.py  stratification.py
src/srl/parser/: __init__.py  grammar.lark  parser.py  transformer.py
src/srl/rdf/: __init__.py  graph.py  namespace.py  nodes.py
tests/: README.md  conftest.py  debug_parser.py  debug_transform.py  manifest_utils.py  test_ast_filter.py  test_bind.py  test_complete.py  test_datatypes.py  test_ebv.py  test_engine.py  test_examples.py  test_expression_parsing.py  test_filter.py  test_filter_debug.py  test_parser.py  test_parser_basic.py  test_rdf_graph.py  test_simple.py
tests/test-cases/: EXAMPLES.md  manifest.ttl
tests/test-cases/aggregation/: aggregation-001-result.ttl  aggregation-002-result.ttl  aggregation-002.ttl  manifest.ttl
tests/test-cases/basic-inference/: basic-inference-001-result.ttl  basic-inference-002-result.ttl  basic-inference-003-result.ttl  basic-inference-003.srl  basic-inference-003.ttl  manifest.ttl
tests/test-cases/exists-patterns/: exists-patterns-001.srl  exists-patterns-004-result.ttl  exists-patterns-005-result.ttl  exists-patterns-005.srl  exists-patterns-005.ttl  manifest.ttl
tests/test-cases/hash-functions/: hash-functions-001-result.ttl  hash-functions-001.srl  hash-functions-002-result.ttl  hash-functions-002.srl  hash-functions-003.srl  manifest.ttl
tests/test-cases/negation/: manifest.ttl  negation-001-result.ttl  negation-001.srl  negation-002-result.ttl  negation-003-result.ttl  negation-003.srl  negation-003.ttl
tests/test-cases/path-expressions/: manifest.ttl  path-expressions-001-result.ttl  path-expressions-001.ttl  path-expressions-003-result.ttl  path-expressions-003.ttl  path-expressions-004.srl  path-expressions-006.ttl
tests/test-cases/rule-formats/: manifest.ttl  rule-format-001-result.ttl  rule-format-002-result.ttl  rule-format-003.ttl  rule-format-004-result.ttl  rule-format-004.srl  rule-format-004.ttl  rule-format-005-result.ttl  rule-format-005.ttl  rule-format-007-result.ttl  rule-format-008-result.ttl  rule-format-008.srl  rule-format-009.srl  rule-format-010-result.ttl  rule-format-012-result.ttl  rule-format-012.srl
tests/test-cases/string-functions/: manifest.ttl  string-functions-001-result.ttl  string-functions-002-result.ttl  string-functions-002.srl  string-functions-003-result.ttl  string-functions-004-result.ttl  string-functions-005-result.ttl  string-functions-005.srl  string-functions-005.ttl
tests/test-cases/symmetric/: manifest.ttl  symmetric-001-result.ttl  symmetric-002-result.ttl  symmetric-003-result.ttl  symmetric-003.srl  symmetric-004-result.ttl  symmetric-004.srl
tests/test-cases/syntax-bad/: manifest.ttl  syntax-bad-001.srl  syntax-bad-002.srl  syntax-bad-003.srl  syntax-bad-004.srl  syntax-bad-005.srl
tests/test-cases/transitive/: manifest.ttl  transitive-001-result.ttl  transitive-001.srl  transitive-002-result.ttl  transitive-002.ttl
tests/test-cases/validation/: manifest.ttl  validation-001-result.ttl  validation-001.srl
tests/test-cases/vocab/: pyrl.ttl
