[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py-srl"
dynamic = ["version"]
description = "Python SHACL 1.2 Rules (SRL) Parser and Evaluation Engine"
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
authors = [{ name = "Simon Steyskal", email = "simon.steyskal@siemens.com" }]
keywords = ["SHACL", "RDF", "rules", "semantic-web", "reasoning", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rdflib>=7.0.0",
    "click>=8.0.0",
    "rich>=14.0.0",
    "rich-click>=1.9.0",
    "lark>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "mypy>=1.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
]

[project.urls]
Homepage = "https://github.com/simonstey/py-srl"
Repository = "https://github.com/simonstey/py-srl"
Issues = "https://github.com/simonstey/py-srl/issues"

[project.scripts]
srl = "srl.cli.main:cli"

# ---------------------------------------------------------------------------
# Hatchling configuration
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.hatch.build.hooks.vcs]
version-file = "src/srl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/srl"]

[tool.hatch.build.targets.wheel.force-include]
"src/srl/py.typed" = "srl/py.typed"
"src/srl/parser/grammar.lark" = "srl/parser/grammar.lark"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/srl"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
